--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon --watch server.js"
+    "dev": "nodemon --watch"
   },
   "author": "Divi4",
   "license": "ISC",
