--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Divi4",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^3.7.1",
     "connect-mongo": "^3.2.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
